--- a/index.html
+++ b/index.html
@@ -410,48 +410,17 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease;
             position: relative;
-            overflow: hidden;
         }
 
         .photo-frame:hover {
             transform: translateY(-10px) rotate(2deg);
         }
 
-        /* ENHANCED IMAGE HOVER OVERLAY */
         .photo-frame img {
             width: 100%;
             height: 300px;
             object-fit: cover;
             border-radius: 5px;
-            transition: transform 0.3s ease;
-        }
-
-        .photo-overlay {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            right: 15px;
-            bottom: 45px;
-            background: rgba(255, 107, 157, 0.9);
-            border-radius: 5px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.3em;
-            font-weight: bold;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .photo-frame:hover .photo-overlay {
-            opacity: 1;
-        }
-
-        .photo-frame:hover img {
-            transform: scale(1.05);
         }
 
         .photo-caption {
@@ -630,15 +599,15 @@
     <div class="welcome-overlay" id="welcomeOverlay" style="display: none;">
         <div class="welcome-box">
             <div class="heart" style="font-size: 60px;">💕</div>
-            <h2>Welcome Charms 💖</h2>
-            <p>I made something special for you.<br>Click below to begin with music 🎵</p>
+            <h2>Welcome Lovee 💖</h2>
+            <p>I made something special for you.<br></p>
             <button class="start-btn" onclick="startExperience()">Start 💖</button>
         </div>
     </div>
 
     <!-- Background Music -->
     <audio id="bgMusic" loop>
-        <source src="your-song.mp3" type="audio/mpeg">
+        <source src="A Song for Heaven.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
@@ -648,7 +617,7 @@
             <span id="playIcon">▶️</span>
         </button>
         <div class="music-info">
-            <div class="music-title">Our Song 🎵</div>
+            <div class="music-title">Our Song </div>
             <div class="music-status" id="musicStatus">Playing...</div>
         </div>
         <div class="volume-control">
@@ -723,37 +692,31 @@
             <div class="photo-gallery">
                 <div class="photo-frame scroll-reveal-left">
                     <img src="started.jpg">
-                    <div class="photo-overlay">Where it all began ❤️</div>
                     <div class="photo-caption">Where it all began ❤️</div>
                 </div>
 
                 <div class="photo-frame scroll-reveal-right">
                     <img src="memries.jpg">
-                    <div class="photo-overlay">Making memories with you 💕</div>
                     <div class="photo-caption">Making memories with you 💕</div>
                 </div>
 
                 <div class="photo-frame scroll-reveal-left">
                     <img src="fav.jpg">
-                    <div class="photo-overlay">Our favorite adventure 🌟</div>
                     <div class="photo-caption">Our favorite adventure 🌟</div>
                 </div>
 
                 <div class="photo-frame scroll-reveal-right">
                     <img src="mmhap.jpg">
-                    <div class="photo-overlay">You make me so happy 😊</div>
                     <div class="photo-caption">You make me so happy 😊</div>
                 </div>
 
                 <div class="photo-frame scroll-reveal-left">
                     <img src="stillu.jpg">
-                    <div class="photo-overlay">Still falling for you 💖</div>
                     <div class="photo-caption">Still falling for you 💖</div>
                 </div>
 
                 <div class="photo-frame scroll-reveal-right">
                     <img src="formy.jpg">
-                    <div class="photo-overlay">Forever my favorite person 💑</div>
                     <div class="photo-caption">Forever my favorite person 💑</div>
                 </div>
             </div>
@@ -821,7 +784,7 @@
                 setTimeout(function() {
                     document.getElementById('welcomeOverlay').style.display = 'flex';
                 }, 800);
-            }, 2500); // Show loading screen for 2.5 seconds
+            }, 2500);
         });
 
         // ===== COUNTDOWN TIMER =====
@@ -832,7 +795,6 @@
             const now = new Date();
             const diff = now - startDate;
 
-            // Calculate time units
             const totalDays = Math.floor(diff / (1000 * 60 * 60 * 24));
             const months = Math.floor(totalDays / 30);
             const days = totalDays % 30;
@@ -845,7 +807,6 @@
             document.getElementById('minutes').textContent = minutes;
         }
 
-        // Update countdown every minute
         updateCountdown();
         setInterval(updateCountdown, 60000);
 
@@ -863,7 +824,6 @@
             });
         }, observerOptions);
 
-        // Observe all scroll reveal elements
         document.querySelectorAll('.scroll-reveal, .scroll-reveal-left, .scroll-reveal-right').forEach(el => {
             observer.observe(el);
         });
