--- a/index.html
+++ b/index.html
@@ -656,6 +656,10 @@
                     <span class="countdown-number" id="minutes">0</span>
                     <span class="countdown-label">Minutes</span>
                 </div>
+                <div class="countdown-item">
+                    <span class="countdown-number" id="seconds">0</span>
+                    <span class="countdown-label">Seconds</span>
+                </div>
             </div>
         </div>
 
@@ -800,11 +804,13 @@
             const days = totalDays % 30;
             const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((diff % (1000 * 60)) / 1000);
 
             document.getElementById('months').textContent = months;
             document.getElementById('days').textContent = days;
             document.getElementById('hours').textContent = hours;
             document.getElementById('minutes').textContent = minutes;
+            document.getElementById('seconds').textContent = seconds;
         }
 
         updateCountdown();
@@ -902,3 +908,4 @@
     </script>
 </body>
 </html>
+
