--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
     <div class="container">
         <div class="header scroll-reveal">
             <div class="heart">💕</div>
-            <h1>Happy 20 Months!</h1>
+            <h1>Happy Monthsary!</h1>
             <div class="subtitle">MAHALLL</div>
             <div class="date">October 18, 2025</div>
         </div>
@@ -1540,3 +1540,4 @@
     </script>
 </body>
 </html>
+
