Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2613,7 +2613,8 @@
         // --- Sync with npoint.io (shared online storage) ---
         async function loadAlbumFromCloud() {
             try {
-                const res = await fetch(NPOINT_URL);
+                // Add timestamp to prevent caching
+                const res = await fetch(NPOINT_URL + '?t=' + Date.now(), { cache: "no-store" });
                 const data = await res.json();
                 albumPhotos = Array.isArray(data) ? data : (data.photos || []);
                 // Migrate old format: if photo is just a string URL, convert to object
@@ -2641,15 +2642,40 @@
         }
 
         async function saveAlbumToCloud() {
-            localStorage.setItem('motmot_album_cloud', JSON.stringify(albumPhotos));
             try {
+                // 1. Fetch the latest data from cloud first
+                const res = await fetch(NPOINT_URL + '?t=' + Date.now(), { cache: "no-store" });
+                let cloudPhotos = [];
+                if (res.ok) {
+                    const data = await res.json();
+                    cloudPhotos = Array.isArray(data) ? data : (data.photos || []);
+                }
+
+                // 2. Merge: use URL as unique key
+                const mergedMap = new Map();
+                // Add cloud photos first
+                cloudPhotos.forEach(p => { if (p.url) mergedMap.set(p.url, p); });
+                // Local photos override cloud (they have latest edits like favorites, comments, folder)
+                albumPhotos.forEach(p => { if (p.url) mergedMap.set(p.url, p); });
+
+                // 3. Update local array with merged result
+                albumPhotos = Array.from(mergedMap.values());
+                localStorage.setItem('motmot_album_cloud', JSON.stringify(albumPhotos));
+
+                // 4. Save merged data to cloud
                 await fetch(NPOINT_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(albumPhotos)
                 });
+
+                // 5. Re-render with merged data
+                renderFilters();
+                renderAlbum();
             } catch (err) {
                 console.error('Failed to sync album to cloud:', err);
+                // Still save locally as fallback
+                localStorage.setItem('motmot_album_cloud', JSON.stringify(albumPhotos));
             }
         }
 
@@ -3155,6 +3181,27 @@
 
         // --- Load album from cloud on page load ---
         loadAlbumFromCloud();
+
+        // --- Auto-sync: poll for new photos every 15 seconds ---
+        setInterval(async () => {
+            try {
+                const res = await fetch(NPOINT_URL + '?t=' + Date.now(), { cache: "no-store" });
+                if (!res.ok) return;
+                const data = await res.json();
+                const cloudPhotos = Array.isArray(data) ? data : (data.photos || []);
+                // Only update if photo count changed (new photos added or removed)
+                if (cloudPhotos.length !== albumPhotos.length) {
+                    // Merge: keep local edits, add new cloud photos
+                    const mergedMap = new Map();
+                    albumPhotos.forEach(p => { if (p.url) mergedMap.set(p.url, p); });
+                    cloudPhotos.forEach(p => { if (p.url && !mergedMap.has(p.url)) mergedMap.set(p.url, p); });
+                    albumPhotos = Array.from(mergedMap.values());
+                    localStorage.setItem('motmot_album_cloud', JSON.stringify(albumPhotos));
+                    renderFilters();
+                    renderAlbum();
+                }
+            } catch (e) { /* silent fail */ }
+        }, 15000);
     </script>
 
     <!-- ENHANCED LIGHTBOX (Facebook-style) -->
