--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
         }
 
         /* Music Player Styles */
-        .music-player {
+         .music-player {
             position: fixed;
-            bottom: 30px;
+            bottom: 50px;
             right: 30px;
             background: rgba(255, 255, 255, 0.95);
-            padding: 20px;
+            padding: 10px 15px;
             border-radius: 50px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 12px;
             z-index: 1000;
             transition: all 0.3s ease;
         }
@@ -135,13 +135,13 @@
         }
 
         .play-pause-btn {
-            width: 50px;
-            height: 50px;
+            width: 42px;
+            height: 42px;
             border-radius: 50%;
             background: linear-gradient(135deg, #ff6b9d 0%, #c06c84 100%);
             border: none;
             color: white;
-            font-size: 20px;
+            font-size: 18px;
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -160,7 +160,7 @@
         }
 
         .music-title {
-            font-size: 0.9em;
+            font-size: 0.85em;
             color: #333;
             font-weight: bold;
         }
@@ -177,18 +177,18 @@
         }
 
         .volume-icon {
-            font-size: 18px;
+            font-size: 16px;
         }
 
         input[type="range"] {
-            width: 80px;
+            width: 70px;
             height: 5px;
             border-radius: 5px;
             background: #ddd;
             outline: none;
             -webkit-appearance: none;
         }
-
+        
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
             appearance: none;
@@ -3331,3 +3331,4 @@
     </div>
 </body>
 </html>
+
